@@ -2,6 +2,7 @@ appdirs
 colorama
 coloredlogs
 mistune
+psutil
 pyside2
 python-box
 qtpy
